# mcstas_gisans

./: .gitignore  65m_nowfm_coll.instr  GISANS_events_back.instr  INSTALL.md  LICENSE  README.md  conda.yml  d22data.py  events2BA.py  experiment_time_utilities.py  findFWHM.py  inputOutput.py  input_output_utilities.py  instruments.py  loki_master_model.instr  mcstasMonitorFitting.py  neutron_utilities.py  oldProcessing.py  old_processing.py  output_mcpl.py  plotQ.py  plotting_utilities.py  pyproject.toml  readD22Data.py  requirements.txt  sharedMemory.py
data/paper/d22_measurement/: 073162.nxs  (+1 more)
examples/paper/: README.md  run_d22_mcstas.sh  run_d22_sim.sh  run_paper_plot.sh
mcstas/: 65m_nowfm_coll.instr  GISANS_events.instr  GISANS_events_back.instr  ILL_H512_D22.instr  loki_master_model.instr  sbend_wfm_65m_res1_4a.instr
models/: lamellas_and_spheres.py  silica_100nm_air.py  silica_air.py
resources/mcstas_models/: ILL_D22.instr  Vertical_Bender.comp
src/mcstas/: 65m_nowfm_coll.instr  loki_functions.c  loki_master_model.instr
src/mcstas_gisans/: detector.py  events2BA.py  experiment_time.py  fit_monitor.py  fit_monitor_cli.py  get_models.py  get_samples.py  input_output.py  input_output_utilities.py  instrument.py  instrument_defaults.py  instruments.py  mcstasMonitorFitting.py  mcstas_reader.py  neutron_calculations.py  neutron_utilities.py  old_processing.py  parameters.py  particle_calculations.py  plot.py  plotQ.py  plot_cli.py  plotting_utils.py  preconditioning.py  read_d22.py  run.py  run_cli.py  sample.py  tof_filtering.py
tests/: test_cli.py
(+44 files in other folders)
